# web-demo

./: .env  .env.example  .gitignore  Cargo.toml  README.md
log/: web-demo.log.2023-10-13
src/: main.rs
src/api/: mod.rs
src/api/hello/: mod.rs  schema.rs  view.rs
src/core/: auth.rs  consts.rs  mod.rs  pool.rs  state.rs
src/util/: error.rs  jwt.rs  log.rs  mod.rs  resp.rs
