[package]
name = "web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1", features = ['full'] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"